--- a/project7-master/css/style.css
+++ b/project7-master/css/style.css
@@ -18,6 +18,9 @@ body {
     color: #444;
     font-family: "Open Sans", sans-serif;
 }
+.active{
+    color: #E91E63 !important;
+}
 .header-up{
 	background: linear-gradient(45deg, #E91E63 -132%, #0c2e8a 100%);
     padding: 10px 0;
@@ -78,25 +81,167 @@ body {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
 }
+#header-sticky .header-logo{
+    margin-left: 6%;
+}
+
 #header-sticky .header-logo h1 a{
 	color: #E91E63;
     line-height: 1;
     text-decoration: none;
     display: inline-block;
 }
-ul.navbar-nav li a{
-	color: black;
+
+.dropdown-custom:hover .cdropdown-content{
+    display: block !important;
+    min-width: 125px;
+    position: absolute;
+    background: #fff;
 }
-.active>a{
-	color: #E91E63!important;
-}
-.navbar-toggler{
-	background-color:#cac1c1;
-}
-.navbar{
-	float: right;
+.cdropdown-content{
+    display: none;
 }
 
+/*.dropdown-custom:after{
+    content: '\f0da';
+    content: "\f078";
+   font-family: FontAwesome;
+   font-weight: normal;
+   font-style: normal;
+   font-size: 12px;
+    text-decoration: none;
+    position: absolute;
+    top:;
+}*/
+
+.header1 {
+  background-color: #fff;
+  margin-right: 12%;
+  width: 100%;
+  z-index: 9999999;
+}
+
+.header1 ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.header1 li a {
+  display: block;
+    padding: 1px 8px;
+    margin-top: 15px;
+    text-decoration: none;
+    color: #636363;
+    transition: 0.4s;
+    font-weight: 700;
+    font-family: "Raleway", sans-serif;
+    font-size: 14px;
+    outline: none;
+}
+
+.header1 li a:hover,
+.header1 .menu-btn:hover {
+  /*background-color: #f4f4f4;*/
+  color: #E91E63 ;
+}
+
+
+/* menu */
+
+.header1 .menu {
+  clear: both;
+  max-height: 0;
+  margin-right: 4%;
+  transition: max-height .2s ease-out;
+}
+
+/* menu icon */
+
+.header1 .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header1 .menu-icon .navicon {
+  background: #333;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.header1 .menu-icon .navicon:before,
+.header1 .menu-icon .navicon:after {
+  background: #333;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.header1 .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.header1 .menu-icon .navicon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.header1 .menu-btn {
+  display: none;
+}
+
+.header1 .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.header1 .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header1 .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header1 .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header1 .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header1 .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+/* 48em = 768px */
+
+@media (min-width: 48em) {
+  .header1 li {
+    float: left;
+  }
+  
+  .header1 .menu {
+    clear: none;
+    float: right;
+    max-height: none;
+  }
+  .header1 .menu-icon {
+    display: none;
+  }
+}
+
+/*new navbar ends*/
 
 #banner{
 	width: 100%;
@@ -918,6 +1063,12 @@ html{
     border: 1px solid;
 }
 
+}
 
-
+@media only screen and (min-width: 320px) and (max-width: 500px){
+    .customcenter {
+    width: 38%;
+    margin: 0 auto;
+    text-align: center;
+    }
 }
