--- a/project7-master/css/style.css
+++ b/project7-master/css/style.css
@@ -1,6 +1,6 @@
 *{
 	box-sizing: border-box;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     padding: 0;
 }
 body {
@@ -70,6 +70,7 @@ body {
     transition: all 0.5s;
     z-index: 997;
     background: #fff;
+    border-bottom: 1px solid #eee;
     /*box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06);*/
     
 }
@@ -997,6 +998,9 @@ html{
    #contact {
     padding: 30px 0;
     }
+    .header1 .menu {
+    margin-right: 12px;
+     }
 }
 
 @media only screen and (max-width: 1200px) {
